html/fonts.css
.xxl-txt {
    font-size: 100px;
}
.xl-txt {
    font-size: 80px;
}
.l-txt {
    font-size: 60px;
}
.md-txt {
    font-size: 40px;
}
.sm-txt {
    font-size: 20px;
}
.xs-txt {
    font-size: 15px;
}
.cursive{
    font-family: 'Charm', cursive;
}
.sans-serif{
    font-family: 'Oxygen', sans-serif;
}
.serif{
    font-family: 'Crimson Text', sans-serif;
}
h1, h2, h3, p {
    margin: 0;
}
header h1, .pageSections li a:hover,
.footer .companyRulesContainer p {
    color: #ffa801;
}
header i {
    margin-left: 3px;
    color: white;
}
ul.pageSections, 
.bannerSection h1, 
.bannerSection h2, 
.service i,
.portfolioCategory i,
.endOfTimeline,
.employee .socialMediaBtns i,
.contactUsSection .contactUsSectionHeader h1,
.contactUsSection .contactUsSectionHeader p,
.footer .socialIconsContainer i ,
.bannerSection a{
    color: white;
}
.bannerSection h1{
    font-weight: bolder;
}

.bannerSection h2, 
.servicesSectionHeader p, 
.portfolioSectionHeader p,
.portfolioCategory p,
.projectDialog .dialogHeader p,
.aboutSection .aboutSectionHeader p,
.timelineContainer .txtContainer p,
.teamSectionHeader p,
.contactUsSection .contactUsSectionHeader p{
    font-style: italic;
}

.servicesSectionHeader p, 
.service p, 
.portfolioSectionHeader p,
.portfolioCategory p,
.projectDialog .dialogHeader p,
.projectDialog .dialogBody p,
.projectDialog .projectDialogFooter p,
.aboutSection .aboutSectionHeader p,
.timelineContainer .txtContainer p,
.teamSectionHeader p,
.employee p,
.teamSectionFooter
{
    color: #485460;
}

.headerTopRow a{
    color: #ffa801;
    text-decoration: none;
}

